--- a/common/ld2450-base.yaml
+++ b/common/ld2450-base.yaml
@@ -202,12 +202,25 @@ number:
     optimistic: True
     restore_value: True
     initial_value: 600
+  - platform: template
+    name: "Installation Angle"
+    id: installation_angle_ui
+    unit_of_measurement: "º"
+    min_value: -45
+    max_value: 45
+    step: 1
+    update_interval: never
+    optimistic: true
+    restore_value: true
+    initial_value: 0
+    icon: "mdi:angle-acute"
+    entity_category: config
 
   - platform: template
     name: "Zone 1 Begin X"
     id: zone1_begin_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -216,8 +229,8 @@ number:
   - platform: template
     name: "Zone 1 End X"
     id: zone1_end_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -227,7 +240,7 @@ number:
     name: "Zone 1 Begin Y"
     id: zone1_begin_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560 # if epl is rotated 45deg, a target could be detected at negative values: -6000*sin(60deg-45deg) = ~-1552
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -237,7 +250,7 @@ number:
     name: "Zone 1 End Y"
     id: zone1_end_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -257,8 +270,8 @@ number:
   - platform: template
     name: "Zone 2 Begin X"
     id: zone2_begin_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -267,8 +280,8 @@ number:
   - platform: template
     name: "Zone 2 End X"
     id: zone2_end_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -278,7 +291,7 @@ number:
     name: "Zone 2 Begin Y"
     id: zone2_begin_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -288,7 +301,7 @@ number:
     name: "Zone 2 End Y"
     id: zone2_end_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -309,8 +322,8 @@ number:
   - platform: template
     name: "Zone 3 Begin X"
     id: zone3_begin_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -319,8 +332,8 @@ number:
   - platform: template
     name: "Zone 3 End X"
     id: zone3_end_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -330,7 +343,7 @@ number:
     name: "Zone 3 Begin Y"
     id: zone3_begin_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -340,7 +353,7 @@ number:
     name: "Zone 3 End Y"
     id: zone3_end_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -361,8 +374,8 @@ number:
   - platform: template
     name: "Zone 4 Begin X"
     id: zone4_begin_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -371,8 +384,8 @@ number:
   - platform: template
     name: "Zone 4 End X"
     id: zone4_end_x
-    max_value: 4000
-    min_value: -4000
+    max_value: 6000
+    min_value: -6000
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -382,7 +395,7 @@ number:
     name: "Zone 4 Begin Y"
     id: zone4_begin_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -392,7 +405,7 @@ number:
     name: "Zone 4 End Y"
     id: zone4_end_y
     max_value: 6000
-    min_value: 0
+    min_value: -1560
     unit_of_measurement: "mm"
     step: 10
     optimistic: True
@@ -666,6 +679,10 @@ uart:
 
           float max_distance = float(id(distance).state) * 10;
           if (p1_distance < max_distance) {
+            if(id(installation_angle_ui).state != 0){
+              p1_x = p1_distance * cos((p1_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+              p1_y = p1_distance * sin((p1_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+            }
             if (id(target1_x).state != p1_x)
               id(target1_x).publish_state(p1_x);
             if (id(target1_y).state != p1_y)
@@ -696,6 +713,10 @@ uart:
           }
 
           if (p2_distance < max_distance) {
+            if(id(installation_angle_ui).state != 0){
+              p2_x = p2_distance * cos((p2_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+              p2_y = p2_distance * sin((p2_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+            }
             if (id(target2_x).state != p2_x)
               id(target2_x).publish_state(p2_x);
             if (id(target2_y).state != p2_y)
@@ -726,6 +747,10 @@ uart:
           }
 
           if (p3_distance < max_distance) {
+            if(id(installation_angle_ui).state != 0){
+              p3_x = p3_distance * cos((p3_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+              p3_y = p3_distance * sin((p3_angle - id(installation_angle_ui).state)/RADIANS_TO_DEGREES);
+            }
             if (id(target3_x).state != p3_x)
               id(target3_x).publish_state(p3_x);
             if (id(target3_y).state != p3_y)
